added experience component, need to fix functionality since it broke after adding into div container

--- a/cv-application/src/App.css
+++ b/cv-application/src/App.css
@@ -15,9 +15,12 @@
 }
 
 .sheet {
+  display: flex;
+  flex-direction: column;
   background-color: white;
   width: 595px;
   height: 845px;
+  gap: 10px;
 }
 
 .Contain {
