--- a/cv-application/src/App.css
+++ b/cv-application/src/App.css
@@ -21,6 +21,8 @@ body {
 .resume {
   margin-left: 10px;
   color: black;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 12px;
 }
 
 .sheet {
